css: correct gap between columns

--- a/web/css/main-styles.css
+++ b/web/css/main-styles.css
@@ -26,8 +26,7 @@ header {
 }
 
 main {
-    min-height: 600px;    
-    padding-bottom: 50px;
+    min-height: 600px;
 }
 
 header nav a {
@@ -108,6 +107,7 @@ footer #copyright-information-footer {
 #professional-profile {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 2em;
     font-size: 16px;
     color: rgb(53, 53, 53);
     padding: 20px 10px;
